Add Benefit and ViewCount Add Most Viewed in Filter on Home Add Benefit and Viewcount

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
         <item>Arms</item>
         <item>Belly</item>
         <item>Legs</item>
+        <item>Most Viewed</item>
     </string-array>
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
