--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string-array name="categories">
+        <item>Recommended</item>
         <item>All</item>
         <item>Whole Body</item>
         <item>Arms</item>
